--- a/css/cssGrid/style.css
+++ b/css/cssGrid/style.css
@@ -10,25 +10,40 @@ html, body{
     display: grid; /* start o grid */
     grid-template-columns: 3fr 1fr; /* define a divisão onde a primeira coluna tem 3 frações e a última apenas 1 */
     grid-template-rows: 20vh 70vh 10vh;
+    grid-template-areas: "header header"
+                         "main aside"
+                         "footer footer";
 }
 
 
 header{
     background: yellow;
-    height: 100px;
+    grid-area: header;
+    /* grid-column: 1/3; - shortcut para o grid-column-start + grid-column-end */
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
+     /*grid-row: 3/4; - shortcut para o grid-row-start + grid-row-end */
+    /* grid-row-start: 3;
+    grid-row-end: 4; */
 }
 
 main{
     background: blue;
-    height: 100px;
+    grid-area: main;
+    /* grid-column-start: 1;
+    grid-column-end: 2; */
 }
 
 aside{
     background: green;
-    height: 100px;
+    grid-area:  aside;
+    /* grid-column-start: 2;
+    grid-column-end: 3; */
 }
 
 footer{
     background: red;
-    height: 100px;
+    grid-area: footer;
+    /* grid-column-start: 1;
+    grid-column-end: 3; */
 }
